cavsiopy_installation_guide.txt
before installing requirements: cartopy requires the below for pip
sudo apt -y install libgeos-dev
conda install -c conda-forge cartopy
======================================================================================
before installing pysofa (https://kloppenborg.net/blog/building-sofa-for-pysofa/):
compile shared c library

sudo apt-get install python python-all-dev build-essential cmake

Download and extract SOFA from the official download page: http://www.iausofa.org/2010_1201_C.html
This software specifically works with the 2010 version of SOFA library.

After extracting SOFA, cd into the main directory and create a CMakeLists.txt file with the following content:

----------------------------------------------------------------------------------------
cmake_minimum_required(VERSION 2.6)

project(sofa_c C)
  
# Set a few variables:
set(LIBS ${LIBS} m)

# Extract all of the source files.
file(GLOB_RECURSE C_SOURCE . src/*.c)

  
# Build a shared library
add_library(sofa_c SHARED ${C_SOURCE})

  
# Now define the installation options
install(TARGETS sofa_c LIBRARY DESTINATION lib)
----------------------------------------------------------------------------------------

cmake .
make
make install

sudo ldconfig

pip install -r requirements.txt
========================================================================================
pysofa related problems:
========================================================================================

ModuleNotFoundError: No module named 'pysofa_ctypes'
copy the contents of pysofa_ctypes to __init__.py

=========================================================================================

if __sofa_version < (2010, 12, 01):
                                   ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers

find and replace all 2010, 12, 01 with 2010, 12, 1 in __init__.py


to solve the ctypes problem:
copy all contents of the pysofa_ctypes.py to __init__ file.
to solve numpy syntax incompatibility:
if __sofa_version < =  (2010, 12, 01)
change all (2010, 12, 01) to (2010, 12, 1). in __init__
